--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,12 @@ edition = "2021"
 [dependencies]
 dioxus = { version = "0.6", features = ["router", "fullstack"] }
 dioxus-class = "0.8"
-manganis = "0.6"
 directories = "5.0"
+walkdir = "2.5"
+lofty = "0.22"
+web-sys = "0.3"
+gloo-file = "0.3"
+wasm-bindgen = "0.2"
 
 
 [features]
